# tictactoe_xia_rong

./: .coverage  CHANGELOG.md  README.md
.ipynb_checkpoints/: game-checkpoint.py  pyproject-checkpoint.toml
docs/: Makefile  conf.py  make.bat
docs/.ipynb_checkpoints/: conf-checkpoint.py
docs/_build/doctrees/: changelog.doctree  conduct.doctree  contributing.doctree  environment.pickle  example.doctree  index.doctree  readme.doctree
docs/_build/doctrees/autoapi/: index.doctree
docs/_build/doctrees/autoapi/tictactoe_rx2255/: index.doctree
docs/_build/doctrees/autoapi/tictactoe_rx2255/game/: index.doctree
docs/_build/doctrees/autoapi/tictactoe_rx2255/tictactoe_rx2255/: index.doctree
docs/_build/html/: .buildinfo  changelog.html  conduct.html  contributing.html  example.html  genindex.html  index.html  objects.inv  py-modindex.html  readme.html  search.html  searchindex.js
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/tictactoe_rx2255/: game.html
docs/_build/html/_sources/: example.ipynb.txt
docs/_build/html/_sources/autoapi/: index.rst.txt
docs/_build/html/_sources/autoapi/tictactoe_rx2255/: index.rst.txt
docs/_build/html/autoapi/: index.html
docs/_build/html/autoapi/tictactoe_rx2255/: index.html
docs/_build/html/autoapi/tictactoe_rx2255/game/: index.html
docs/_build/html/autoapi/tictactoe_rx2255/tictactoe_rx2255/: index.html
docs/_build/jupyter_execute/: example.ipynb
src/tictactoe_rx2255/: __init__.py
tests/: test_game.py  test_tictactoe_rx2255.py
tictactoe_rx2255/: CONTRIBUTING.md  LICENSE  pyproject.toml
(+2 files in other folders)
