[tool.poetry]
name = "tictactoe_rx2255"
version = "0.1.0"
description = "An interactive Python package that provides functions to play and manage a Tic-Tac-Toe game, including initializing the board, making moves, checking for winners, and resetting the game. Designed for easy integration and testing."
authors = ["Rong Xia"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
